external-crates/move/crates/move-compiler/tests/move_check/parser/positional_struct_unpack.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E03013]: positional call mismatch
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
4 │     struct Foo { f: u64 }
  │            --- 'Foo' is declared here
  ·
7 │         Foo(_) = x;
  │         ^^^^^^ Invalid struct deconstruction. Named struct declarations require named deconstructions

error[E04016]: too few arguments
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Missing assignment for field 'f' in '0x42::M::Foo'

error[E03010]: unbound field
  ┌─ tests/move_check/parser/positional_struct_unpack.move:7:9
  │
7 │         Foo(_) = x;
  │         ^^^^^^ Unbound field '0' in '0x42::M::Foo'

