external-crates/move/crates/move-compiler/tests/move_check/parser/positional_struct_unpack.move
address 0x42 {
module M {
    // Positional struct declarations are not supported till 2024
    struct Foo { f: u64 }

    fun f(x: Foo) {
        Foo(_) = x;
    }
}
}
